CHANGES
*******

0.5 (unreleased)
================

- Nothing changed yet.


0.4 (2015-01-06)
================

- Rename ``transaction_app`` to ``TransactionApp`` to be consistent
  with modern class naming in Morepath. Still provide
  ``transaction_app`` for backwards compatibility.

- Modify ``setup.py`` to use ``io.open`` instead of ``open`` to
  include the README and the CHANGELOG and hardcode UTF-8 so it works
  on all versions of Python with all default encodings.

0.3 (2014-11-03)
================

- Compatibility fixes for Morepath 0.7.

0.2 (2014-11-01)
================

- Adjustments to work with Morepath 0.4 and later. (long overdue release,
  thanks Denis Krienbühl for helping me find out!)

0.1 (2014-04-08)
================

- Initial public release.