@@ -28,6 +28,7 @@ setup(name='more.transaction',
           test=[
               'coverage',
               'pytest >= 2.6.0',
-              'pytest-cov'
+              'pytest-cov',
+              'webtest'
           ],
       ))
